[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/GFX/Background/ulice/dvere.png" type="Texture" id=1]
[ext_resource path="res://assets/GFX/Background/ulice/do_prace_button.png" type="Texture" id=2]
[ext_resource path="res://assets/GFX/Background/ulice/domu_button.png" type="Texture" id=3]
[ext_resource path="res://assets/GFX/Background/ulice/ulice_light.png" type="Texture" id=4]
[ext_resource path="res://levels/level_ulice.gd" type="Script" id=5]
[ext_resource path="res://assets/GFX/Background/ulice/veritel_button.png" type="Texture" id=6]
[ext_resource path="res://assets/GFX/Background/ulice/veritel_button_pressed.png" type="Texture" id=7]

[node name="Level_ulice" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Background"]
margin_left = 185.836
margin_top = 263.661
margin_right = 404.836
margin_bottom = 652.661
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prace" type="TextureButton" parent="Buttons"]
margin_left = 1600.68
margin_top = 817.557
margin_right = 1921.68
margin_bottom = 969.557
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Domu" type="TextureButton" parent="Buttons"]
margin_left = 3.19073
margin_top = 825.83
margin_right = 270.191
margin_bottom = 959.83
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditor" type="TextureButton" parent="Buttons"]
visible = false
margin_left = 1603.06
margin_top = 832.445
margin_right = 1915.06
margin_bottom = 956.445
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Bicycle" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bicycle"]
position = Vector2( 0, 2.37842 )
polygon = PoolVector2Array( 647.959, 569.962, 636.305, 578.438, 628.359, 589.032, 624.651, 595.919, 632.067, 601.746, 643.192, 600.156, 647.43, 599.627, 647.43, 608.632, 648.489, 611.811, 645.311, 622.405, 632.597, 627.173, 622.532, 652.07, 626.77, 707.692, 646.9, 750.6, 668.089, 763.844, 693.516, 756.427, 701.462, 725.173, 697.754, 689.681, 704.111, 673.259, 717.884, 666.903, 742.252, 667.432, 755.495, 640.416, 748.608, 590.621, 722.651, 556.719, 705.7, 553.54, 690.338, 518.048, 722.122, 493.68, 655.905, 523.345, 656.435, 527.583, 680.803, 521.756, 692.986, 542.416, 669.149, 586.383, 657.495, 601.746, 652.727, 590.621, 660.673, 570.492 )

[node name="Bottle" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bottle"]
position = Vector2( -165.657, 153.464 )
polygon = PoolVector2Array( 607.466, 574.456, 602.415, 585.4, 601.012, 598.589, 625.145, 608.971, 662.186, 615.145, 675.656, 613.181, 691.651, 617.951, 693.615, 608.971, 676.778, 604.201, 666.676, 594.66 )

[node name="Bin" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bin"]
position = Vector2( 798.343, 1.46362 )
polygon = PoolVector2Array( 401.861, 462.521, 388.426, 490.099, 376.405, 526.868, 377.819, 543.132, 384.183, 644.955, 395.497, 735.465, 415.296, 752.435, 493.078, 751.021, 670.562, 748.9, 683.29, 736.172, 688.239, 666.875, 689.654, 526.161, 679.754, 485.856, 661.369, 458.279, 467.622, 452.622 )

[node name="Paper" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Paper"]
position = Vector2( 798.343, 1.46362 )
polygon = PoolVector2Array( 410.643, 525.067, 401.194, 547.115, 430.802, 562.234, 468.599, 581.133, 483.088, 589.323, 518.996, 526.957 )

[node name="Sign" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sign"]
position = Vector2( 798.343, 1.46362 )
polygon = PoolVector2Array( 406.859, 49.8924, 404.74, 100.747, 405.8, 151.601, 563.66, 155.839, 622.99, 156.898, 620.871, 52.0114 )

[node name="Bar" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bar"]
position = Vector2( 798.343, 1.46362 )
polygon = PoolVector2Array( -605.92, 127.624, -599.246, 204.377, -590.57, 211.719, -417.708, 206.379, -416.373, 129.626 )

[connection signal="pressed" from="Background/Door" to="." method="_on_dvere_pressed"]
[connection signal="pressed" from="Buttons/Prace" to="." method="_on_do_prace_pressed"]
[connection signal="pressed" from="Buttons/Domu" to="." method="_on_domu_pressed"]
[connection signal="pressed" from="Buttons/Creditor" to="." method="_on_Creditor_pressed"]
[connection signal="input_event" from="Bicycle" to="." method="_on_Bicycle_input_event"]
[connection signal="mouse_entered" from="Bicycle" to="." method="_on_not_button_mouse_entered"]
[connection signal="mouse_exited" from="Bicycle" to="." method="_on_not_button_mouse_exited"]
[connection signal="input_event" from="Bottle" to="." method="_on_Bottle_input_event"]
[connection signal="mouse_entered" from="Bottle" to="." method="_on_not_button_mouse_entered"]
[connection signal="mouse_exited" from="Bottle" to="." method="_on_not_button_mouse_exited"]
[connection signal="input_event" from="Bin" to="." method="_on_Bin_input_event"]
[connection signal="mouse_entered" from="Bin" to="." method="_on_not_button_mouse_entered"]
[connection signal="mouse_exited" from="Bin" to="." method="_on_not_button_mouse_exited"]
[connection signal="input_event" from="Paper" to="." method="_on_Paper_input_event"]
[connection signal="mouse_entered" from="Paper" to="." method="_on_not_button_mouse_entered"]
[connection signal="mouse_exited" from="Paper" to="." method="_on_not_button_mouse_exited"]
[connection signal="input_event" from="Sign" to="." method="_on_Sign_input_event"]
[connection signal="mouse_entered" from="Sign" to="." method="_on_not_button_mouse_entered"]
[connection signal="mouse_exited" from="Sign" to="." method="_on_not_button_mouse_exited"]
[connection signal="input_event" from="Bar" to="." method="_on_Bar_input_event"]
[connection signal="mouse_entered" from="Bar" to="." method="_on_not_button_mouse_entered"]
[connection signal="mouse_exited" from="Bar" to="." method="_on_not_button_mouse_exited"]
